Fix: Spacing issue for control notice

--- a/src/common-editor.scss
+++ b/src/common-editor.scss
@@ -83,10 +83,10 @@
 }
 
 /* UAG Help Notice CSS*/
-.uagb-inspector-tab .uag-control-help-notice {
+.interface-complementary-area .uagb-inspector-tab .uag-control-help-notice {
 	margin-top: 10px;
 	font-size: 12px;
-	font-style: normal;
+	font-style: italic;
 	color: rgb(117, 117, 117);
 }
 
